<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_tilUser_margin_top"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieNombreEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUser" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaFinEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_tilPassword_margin_top"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieFechFinEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:buttonTint="@color/colorPrincipal"

            android:checked="false"
            android:text="@string/ckRemember"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/btnRegistro"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="80dp"
        android:backgroundTint="@color/colorPrincipal"

        android:text="@string/btnLogin"
        android:textColor="#212121" />

    <Button
        android:id="@+id/btnSignGoogle"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="80dp"
        android:backgroundTint="@color/colorPrincipal"

        android:text="@string/btnLoginGoogle"
        android:textColor="#212121" />

    <Button
        android:id="@+id/btnSignIn3"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="80dp"
        android:backgroundTint="@color/colorPrincipal"

        android:text="@string/btnLoginFacebook"
        android:textColor="#212121" />

</LinearLayout>