<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/black"
    tools:context=".ui.evento.InformacionEventoFragment">

    <TextView
        android:id="@+id/tvInfoTitle"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/tvInfoEvento"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvNombreEvento"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="262dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tieNombreEvento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="140dp"
        android:text="@string/tvFechaInicio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <TextView
        android:id="@+id/tieFechaInicio"
        android:layout_width="244dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:text="@string/tieFechaInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="228dp"
        android:text="@string/tvFechaFin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <TextView
        android:id="@+id/tieFechaInicio2"
        android:layout_width="244dp"
        android:layout_height="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="188dp"
        android:gravity="center_vertical"
        android:text="@string/tieFechaFin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="324dp"
        android:text="@string/tvUbicacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <TextView
        android:id="@+id/tieFechaInicio3"
        android:layout_width="244dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="284dp"
        android:gravity="center_vertical"
        android:text="@string/tieUbicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="224dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="404dp"
        android:text="@string/tvComentarios"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoTitle" />

    <ImageButton
        android:id="@+id/btnCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/transparente"
        android:foregroundTint="@color/black"
        android:minHeight="48dp"
        android:src="@drawable/ic_action_blackcalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toEndOf="@+id/tieFechaInicio"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="TODO" />

    <ImageButton
        android:id="@+id/btnInfoEventoAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/transparente"
        android:minHeight="48dp"
        android:src="@drawable/ic_action_backarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/transparente"
        android:minHeight="48dp"
        android:src="@drawable/ic_action_ubication"
        app:layout_constraintStart_toEndOf="@+id/tieFechaInicio3"
        app:layout_constraintTop_toBottomOf="@+id/btnCalendario"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="366dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@color/gris"
        android:backgroundTint="@color/gris"
        android:text="@string/tieComentarios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tieFechaInicio3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrincipal"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>