<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.evento.">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gldStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gldEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvSubidaEvento"
        android:layout_width="350dp"
        android:layout_height="81dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/fuentetitulo"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tvPublicarEvento" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tvSubidaEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieNombreEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvNombreEvento"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaInicioEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilNombreEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieFechaInicioEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvFechaInicio"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaFinEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilFechaInicioEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieFechFinEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvFechaFin"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUbicacionEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilFechaFinEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUbicacionEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvUbicacion"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTipoEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilUbicacionEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieTipoEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvTipoEvento"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/gldEnd"
        app:layout_constraintStart_toStartOf="@id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilTipoEvento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvDescripcion"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnBorrarCampos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnBorrar"
        app:layout_constraintStart_toStartOf="@+id/gldStart"
        app:layout_constraintTop_toBottomOf="@+id/tilDescripcion" />

    <Button
        android:id="@+id/btnPublicarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnPublicar"
        app:layout_constraintEnd_toStartOf="@+id/gldEnd"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/btnBorrarCampos"
        app:layout_constraintTop_toBottomOf="@+id/tilDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>