<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfilUsuario.PerfilUsuarioFragment" >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="79dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_action_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAtrasPerfilUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/transparente"
        android:minHeight="48dp"
        android:src="@drawable/ic_action_backarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:gravity="center_vertical"
        android:text="@string/tvNombreUsuario"
        style="@style/Theme.Cascaron.textfont"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/tieEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="243dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:text="@string/tvEmailUsuario"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEmail"
        app:layout_constraintStart_toEndOf="@+id/tvEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>